[ADD] Implement bulk insert functionality with buffering for SMS and notification messages

--- a/RMQConsumerService/src/RMQConsumerService/appsettings.Development.json
+++ b/RMQConsumerService/src/RMQConsumerService/appsettings.Development.json
@@ -23,5 +23,17 @@
             "QueueName": "notification-queue",
             "RoutingKey": "message.notification"
         }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=appdb;Uid=appuser;Pwd=apppassword;"
+    },
+    "BulkInsert": {
+        "DefaultBatchSize": 50,
+        "MaxBatchSize": 5000,
+        "TimeoutSeconds": 300,
+        "EnableTransactionLogging": false,
+        "RetryAttempts": 3,
+        "RetryDelayMs": 1000,
+        "ForceFallbackToStandardInsert": false
     }
 }
