--- a/RMQConsumerService/src/RMQConsumerService/appsettings.json
+++ b/RMQConsumerService/src/RMQConsumerService/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=appdb;Uid=appuser;Pwd=apppassword;"
+  },
+  "BulkInsert": {
+    "DefaultBatchSize": 5,
+    "MaxBatchSize": 5000,
+    "TimeoutSeconds": 300,
+    "EnableTransactionLogging": false,
+    "RetryAttempts": 3,
+    "RetryDelayMs": 1000,
+    "ForceFallbackToStandardInsert": false
+  }
 }
