--- a/RMQConsumerService/src/RMQConsumerService/RMQConsumerService.csproj
+++ b/RMQConsumerService/src/RMQConsumerService/RMQConsumerService.csproj
@@ -11,9 +11,17 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="EFCore.BulkExtensions" Version="8.1.3" />
+	  <PackageReference Include="EFCore.BulkExtensions.MySql" Version="8.1.3" />
 	  <PackageReference Include="MassTransit" Version="8.4.0" />
 	  <PackageReference Include="MassTransit.RabbitMQ" Version="8.4.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <PrivateAssets>all</PrivateAssets>
+	  </PackageReference>
+	  <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.3.efcore.9.0.0" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.0" />
   </ItemGroup>
 
